[MOSIP-15670] Resolved Invalid OTP attempts to be restricted in Pre reg login.
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -412,9 +412,9 @@ mosip.prereg.applicationdetails.eng= pre registration
 mosip.updateregistration.applicationdetails.eng= booking to update registration
 mosip.lostuin.applicationdetails.eng= booking to retrieve the lost UIN
 
-mosip.prereg.applicationdetails.fra= préinscription
-mosip.updateregistration.applicationdetails.fra= réservation pour mettre à jour linscription
-mosip.lostuin.applicationdetails.fra= réservation pour récupérer lUIN perdu
+mosip.prereg.applicationdetails.fra= prï¿½inscription
+mosip.updateregistration.applicationdetails.fra= rï¿½servation pour mettre ï¿½ jour linscription
+mosip.lostuin.applicationdetails.fra= rï¿½servation pour rï¿½cupï¿½rer lUIN perdu
 
 mosip.prereg.applicationdetails.ara= \u0627\u0644\u062A\u0633\u062C\u064A\u0644 \u0627\u0644\u0645\u0633\u0628\u0642
 mosip.updateregistration.applicationdetails.ara= \u0627\u0644\u062D\u062C\u0632 \u0644\u062A\u062D\u062F\u064A\u062B \u0627\u0644\u062A\u0633\u062C\u064A\u0644
@@ -438,3 +438,6 @@ auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosi
 #mosip.security.authentication.provider.beans.list=customJWTAuthProvider
 mosip.security.authentication.provider.beans.list.pre-registration-application-service=customJWTAuthProvider
 mosip.security.authentication.provider.beans.list.pre-registration-booking-service=customJWTAuthProvider
+
+mosip.kernel.data-key-splitter: #KEY_SPLITTER#
+mosip.kernel.otp.validation-attempt-threshold: 10
