[MOSIP-15670] Updated as per review
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -440,4 +440,4 @@ mosip.security.authentication.provider.beans.list.pre-registration-application-s
 mosip.security.authentication.provider.beans.list.pre-registration-booking-service=customJWTAuthProvider
 
 mosip.kernel.data-key-splitter: #KEY_SPLITTER#
-mosip.kernel.otp.validation-attempt-threshold: 10
+pre.reg.login.otp.validation-attempt-threshold: 10
