--- a/.github/workflows/postgres-init_trigger.yml
+++ b/.github/workflows/postgres-init_trigger.yml
@@ -42,7 +42,7 @@ jobs:
           status: ${{ job.status }}
           fields: repo,message,commit,author,job,took,ref # selectable (default: repo,message)
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }} # required
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_DEVOPS }} # required
         if: success() # Pick up events when the job is successful.
 
       # run only if not 'db_release_scripts' files were changed
@@ -63,7 +63,7 @@ jobs:
           status: ${{ job.status }}
           fields: repo,message,commit,author,job,took,ref # selectable (default: repo,message)
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }} # required
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_DEVOPS }}  # required
         if: success() # Pick up events when the job is successful.
 
       # run only if not 'db_scripts' files were changed
@@ -77,7 +77,7 @@ jobs:
     steps:
       - uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ACTION_PAT }}
           repository: mosip/postgres-init
           base: ${{ github.ref }}
           event-type: db-event
