[MOSIP-28179] Updated internal dependencies
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -27,7 +27,7 @@ mosip.preregistration.demographic.id.create=mosip.pre-registration.demographic.c
 mosip.preregistration.demographic.id.update=mosip.pre-registration.demographic.update
 mosip.preregistration.demographic.id.retrieve.date=mosip.pre-registration.demographic.retrieve.date
 appId: prereg
-mosip.base.url=https://api-internal.dev3.mosip.net
+mosip.base.url=https://api-internal.dev.mosip.net
 application.id: pre-registration
 appointmentResourse.url: ${mosip.base.url}/preregistration/v1
 audit.service.contextpath: auditmanager
@@ -79,8 +79,8 @@ hibernate.show_sql: false
 holiday.exceptional.url: ${mosip.base.url}/v1/masterdata/exceptionalholidays/
 holiday.url: ${mosip.base.url}/v1/masterdata/getregistrationcenterholidays/
 javax.persistence.jdbc.driver: org.postgresql.Driver
-javax.persistence.jdbc.password: 
-javax.persistence.jdbc.url=jdbc:postgresql://api-internal.dev3.mosip.net:5432/mosip_prereg
+javax.persistence.jdbc.password: mosip123
+javax.persistence.jdbc.url=jdbc:postgresql://api-internal.dev.mosip.net:5432/mosip_prereg
 javax.persistence.jdbc.user: postgres
 kernel.auth.contextpath: authmanager
 kernel.auth.env: ${mosip.base.url}
@@ -426,7 +426,7 @@ mosip.iam.adapter.clientsecret=
 mosip.iam.adapter.appid=prereg
 
 # URL to get new Auth Token from OIDC provider & to do online validation of auth token with OIDC provider.
-auth.server.admin.issuer.uri=https://iam.dev3.mosip.net/auth/realms/
+auth.server.admin.issuer.uri=https://iam.dev.mosip.net/auth/realms/
 
 # Map to find the realm for the inputted appid to get the token from OIDC provider.
 mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip',idrepo:'mosip',hotlist:'mosip'}
