--- a/pre-registration/pre-registration-application-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/test/resources/application.properties
@@ -818,7 +818,7 @@ preregistration.cookie.contextpath=/
 mosip.preregistration.booking.book.id=mosip.pre-registration.booking.book
 mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
 
-auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/ 
+auth.server.admin.issuer.uri=https://iam.dev.mosip.net/auth/realms/
 mosip.iam.adapter.clientid=mosip-prereg-client
 mosip.iam.adapter.clientsecret=abc123
 mosip.iam.adapter.appid=prereg
