--- a/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
@@ -420,7 +420,7 @@ mosip.iam.adapter.clientsecret.pre-registration-datasync-service=
 mosip.iam.adapter.appid.pre-registration-datasync-service=registrationclient
 
 # URL to get new Auth Token from OIDC provider & to do online validation of auth token with OIDC provider.
-auth.server.admin.issuer.uri=https://iam.qa4.mosip.net/auth/realms/
+auth.server.admin.issuer.uri=https://iam.dev.mosip.net/auth/realms/
 
 # Map to find the realm for the inputted appid to get the token from OIDC provider.
 mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
