--- a/pre-registration/pre-registration-batchjob/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-batchjob/src/main/resources/application.properties
@@ -406,7 +406,7 @@ mosip.iam.adapter.clientsecret=abc123
 mosip.iam.adapter.appid=prereg
 
 # URL to get new Auth Token from OIDC provider & to do online validation of auth token with OIDC provider.
-auth.server.admin.issuer.uri=${mosip.base.url}/keycloak/auth/realms/
+auth.server.admin.issuer.uri=https://iam.dev.mosip.net/auth/realms/
 
 # Map to find the realm for the inputted appid to get the token from OIDC provider.
 mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
