--- a/pre-registration/pre-registration-application-service/pom.xml
+++ b/pre-registration/pre-registration-application-service/pom.xml
@@ -192,6 +192,9 @@
 							<goal>jar</goal>
 						</goals>
 						<configuration>
+							<excludes>
+								<exclude>**/*.properties</exclude>
+							</excludes>
 							<classifier>lib</classifier>
 						</configuration>
 					</execution>
