[MOSIP-29142] update push_trigger & removed postgres-init workflows
[MOSIP-25631]

--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -5,6 +5,13 @@ on:
     types: [published]
   pull_request:
     types: [closed]
+  workflow_dispatch:
+    inputs:
+      message:
+        description: 'Message for manually triggering'
+        required: false
+        default: 'Triggered for Updates'
+        type: string
   push:
     branches:
       - '!release-branch'
