--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -5,12 +5,6 @@ on:
     types: [published]
   pull_request:
     types: [opened]
-    branches:
-      - '!release-branch'
-      - release-1*
-      - 1.*
-      - develop
-      - MOSIP*
   workflow_dispatch:
     inputs:
       message:
@@ -21,11 +15,11 @@ on:
   push:
     branches:
       - '!release-branch'
-      - release-1*
+      - release*
       - master
       - 1.*
       - develop
-      - MOSIP-11719
+      - MOSIP*
 
 jobs:
   build-maven-pre-registration:
