--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -140,7 +140,7 @@
 				<dependency>
 					<groupId>io.mosip.kernel</groupId>
 					<artifactId>kernel-transliteration-icu4j</artifactId>
-					<version>1.2.0-rc1</version>
+					<version>1.2.1-SNAPSHOT</version>
 				</dependency>
 			</dependencies>
 			<build>
