[MOSIP-29805] Updated Anonymous profile
Signed-off-by: Aiham Akram Hasan <aiham.61072510@ltimindtree.com>
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -441,3 +441,5 @@ mosip.security.authentication.provider.beans.list.pre-registration-booking-servi
 
 mosip.kernel.data-key-splitter: #KEY_SPLITTER#
 pre.reg.login.otp.validation-attempt-threshold: 10
+
+mosip.preregistration.user.admin:admin
