--- a/pre-registration/pre-registration-core/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-core/src/test/resources/application.properties
@@ -82,3 +82,5 @@ spring.cloud.config.uri=${dev.dns.url}/config
 spring.cloud.config.label=develop
 spring.cloud.config.name=pre-registration
 spring.profiles.active=mz
+
+mosip.preregistration.user.admin:admin
