[MOSIP-29805] Updated Anonymous profile
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -425,3 +425,5 @@ auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosi
 #mosip.security.authentication.provider.beans.list=customJWTAuthProvider
 mosip.security.authentication.provider.beans.list.pre-registration-application-service=customJWTAuthProvider
 mosip.security.authentication.provider.beans.list.pre-registration-booking-service=customJWTAuthProvider
+
+mosip.preregistration.user.admin:admin
