[MOSIP-29805] Updated naming convention
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -426,4 +426,4 @@ auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosi
 mosip.security.authentication.provider.beans.list.pre-registration-application-service=customJWTAuthProvider
 mosip.security.authentication.provider.beans.list.pre-registration-booking-service=customJWTAuthProvider
 
-mosip.preregistration.user.admin:admin
+mosip.preregistration.anonymous-profile-username:admin
