--- a/pre-registration/pre-registration-core/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-core/src/test/resources/application.properties
@@ -83,4 +83,4 @@ spring.cloud.config.label=develop
 spring.cloud.config.name=pre-registration
 spring.profiles.active=mz
 
-mosip.preregistration.user.admin:admin
+mosip.preregistration.anonymous-profile-username:admin
