--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -442,4 +442,4 @@ mosip.security.authentication.provider.beans.list.pre-registration-booking-servi
 mosip.kernel.data-key-splitter: #KEY_SPLITTER#
 pre.reg.login.otp.validation-attempt-threshold: 10
 
-mosip.preregistration.user.admin:admin
+mosip.preregistration.anonymous-profile-username:admin
