Updated Pom versions for release changes
Signed-off-by: GitHub <noreply@github.com>

--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -7,21 +7,21 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.2.0.1-SNAPSHOT</version>
+		<version>1.2.0.1</version>
 	</parent>
 
 
 
 	<artifactId>pre-registration-datasync-service</artifactId>
 	<name>pre-registration-datasync-service</name>
-	<version>1.2.0.1-SNAPSHOT</version>
+	<version>1.2.0.1</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
-		<pre.registration.core.version>1.2.0.1-SNAPSHOT</pre.registration.core.version>
-		<kernel.keymanager.version>1.2.0.1-SNAPSHOT</kernel.keymanager.version>
+		<pre.registration.core.version>1.2.0.1</pre.registration.core.version>
+		<kernel.keymanager.version>1.2.0.1</kernel.keymanager.version>
 		<io.micrometer.prometheus.version>1.4.2</io.micrometer.prometheus.version>
 	</properties>
 
@@ -135,12 +135,12 @@
 				<dependency>
 					<groupId>io.mosip.kernel</groupId>
 					<artifactId>kernel-ref-idobjectvalidator</artifactId>
-					<version>1.2.0.1-SNAPSHOT</version>
+					<version>1.2.0.1</version>
 				</dependency>
 				<dependency>
 					<groupId>io.mosip.kernel</groupId>
 					<artifactId>kernel-transliteration-icu4j</artifactId>
-					<version>1.2.0.1-SNAPSHOT</version>
+					<version>1.2.0.1</version>
 				</dependency>
 			</dependencies>
 			<build>
