--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -135,7 +135,7 @@
 				<dependency>
 					<groupId>io.mosip.kernel</groupId>
 					<artifactId>kernel-ref-idobjectvalidator</artifactId>
-					<version>1.2.0.1-SNAPSHOT</version>
+					<version>1.2.0.1</version>
 				</dependency>
 				<dependency>
 					<groupId>io.mosip.kernel</groupId>
