--- a/apitest/src/main/resources/preReg/UpdatePreRegStatus/updatePreRegStatus.yml
+++ b/apitest/src/main/resources/preReg/UpdatePreRegStatus/updatePreRegStatus.yml
@@ -12,6 +12,19 @@ UpdatePreRegStatus:
 }'
       output: '{
 }'
+   Prereg_UpdatePreRegStatus_for_expired_testcase_sid:
+      endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
+      role: batch
+      checkErrorsOnlyInResponse: true
+      restMethod: get
+      inputTemplate: preReg/UpdatePreRegStatus/updatePreRegStatus
+      outputTemplate: preReg/UpdatePreRegStatus/updatePreRegStatusResult
+      input: '{
+  "preRegistrationId": "$ID:CreatePrereg_All_Valid_Smoke_for_expiry_sid_preRegistrationId$",
+  "statusCode": "Pending_Appointment"
+}'
+      output: '{
+}'
    Prereg_UpdatePreRegStatus_All_Valid_Smoke_BookByPRID_sid:
       endPoint: /preregistration/v1/applications/prereg/status/{preRegistrationId}?statusCode={statusCode}
       role: batch
