--- a/apitest/src/main/resources/preReg/CancelAppointment/CancelAppointment.yml
+++ b/apitest/src/main/resources/preReg/CancelAppointment/CancelAppointment.yml
@@ -11,6 +11,40 @@ CancelAppointment:
 }'
       output: '{
 }'
+   Prereg_CancelAppointment_with_already_cancelled_appoinment:
+      endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      role: batch
+      checkErrorsOnlyInResponse: true
+      restMethod: put
+      inputTemplate: preReg/CancelAppointment/cancelAppointment
+      outputTemplate: preReg/error
+      input: '{
+  "preRegistrationId": "$ID:CreatePrereg_Smoke_CancellAppointment_sid_preRegistrationId$"
+}'
+      output: '{
+   "errors": [
+    {
+      "errorCode": "PRG_APP_013"
+    }
+  ]
+}'
+   Prereg_CancelAppointment_cancell_incomplete_appoinment:
+      endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      role: batch
+      checkErrorsOnlyInResponse: true
+      restMethod: put
+      inputTemplate: preReg/CancelAppointment/cancelAppointment
+      outputTemplate: preReg/error
+      input: '{
+  "preRegistrationId": "$ID:CreatePrereg_cancell_incomplete_prid_sid_preRegistrationId$"
+}'
+      output: '{
+   "errors": [
+    {
+      "errorCode": "PRG_APP_013"
+    }
+  ]
+}'
    Prereg_CancelAppointment_inValid_preRegistrationId_sid:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
       role: batch
