--- a/apitest/src/main/resources/preReg/GetAppointmentDetails/GetAppointmentDetails.yml
+++ b/apitest/src/main/resources/preReg/GetAppointmentDetails/GetAppointmentDetails.yml
@@ -11,6 +11,18 @@ GetAppointmentDetails:
       output: '{
   "registration_center_id": "10003"
 }'
+   Prereg_GetAppointmentDetails_with_cancelled_appoinment:
+      endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      role: batch
+      restMethod: get
+      inputTemplate: preReg/GetAppointmentDetails/getAppointmentDetails
+      outputTemplate: preReg/GetAppointmentDetails/getAppointmentDetailsResult
+      input: '{
+  "preRegistrationId": "$ID:CreatePrereg_Smoke_CancelApplicationsAppointment_sid_preRegistrationId$"
+}'
+      output: '{
+  "registration_center_id": "10003"
+}'
    Prereg_GetAppointmentDetails_AllValid_Smoke_sid:
       endPoint: /preregistration/v1/appointment/{preRegistrationId}
       role: batch
@@ -32,6 +44,22 @@ GetAppointmentDetails:
       outputTemplate: preReg/error
       input: '{
   "preRegistrationId": "ggfr3567ugg"
+}'
+      output: '{
+   "errors": [
+    {
+      "errorCode": "PRG_APP_013"
+    }
+  ]
+}'
+   Prereg_GetAppointmentDetails_empty_space_preRegistrationId:
+      endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      role: batch
+      restMethod: get
+      inputTemplate: preReg/GetAppointmentDetails/getAppointmentDetails
+      outputTemplate: preReg/error
+      input: '{
+  "preRegistrationId": " "
 }'
       output: '{
    "errors": [
