[MOSIP-30425] Updated prereg bootsrap props
Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>

--- a/pre-registration/pre-registration-application-service/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.cloud.config.uri=https://localhost:8080
 spring.cloud.config.label=develop
-spring.cloud.config.name=pre-registration
+spring.cloud.config.name=application,pre-registration
 spring.application.name=pre-registration-application-service
 spring.profiles.active=mz
 management.endpoint.health.show-details=always
