--- a/pre-registration/pre-registration-batchjob/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-batchjob/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.cloud.config.uri=https://dev.mosip.net
 spring.cloud.config.label=master
-spring.cloud.config.name=pre-registration
+spring.cloud.config.name=application,pre-registration
 spring.application.name=pre-registration-batchjob
 spring.profiles.active=dev
 management.endpoints.web.exposure.include=refresh
