--- a/pre-registration/pre-registration-captcha-service/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-captcha-service/src/main/resources/bootstrap.properties
@@ -2,7 +2,7 @@ server.port=9089
 server.servlet.context-path=/preregistration/v1/captcha
 spring.cloud.config.uri=localhost
 spring.cloud.config.label=master
-spring.cloud.config.name=pre-registration
+spring.cloud.config.name=application,pre-registration
 spring.application.name=pre-registration-captcha-service
 spring.profiles.active=dev
 management.endpoint.health.show-details=always
