--- a/pre-registration/pre-registration-datasync-service/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-datasync-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.cloud.config.uri=localhost
 spring.cloud.config.label=master
-spring.cloud.config.name=pre-registration
+spring.cloud.config.name=application,pre-registration
 spring.application.name=pre-registration-datasync-service
 spring.profiles.active=dev
 management.endpoint.health.show-details=always
